@@ -207,6 +207,7 @@ NAnt build script for the TortoiseSVN language pack installers
     <exec program="light">
       <arg value="-nologo" />
       <arg value="-sw1008" />
+      <arg value="-sice:ICE61" />
       <arg value="-sice:ICE82" />
       <arg value="-sval" if="${schedule == 'yes'}" />
       <arg value="-out" />
