@@ -27,10 +27,16 @@
       Compressed='yes'
       SummaryCodepage='1252' />
 
+    <MajorUpgrade AllowDowngrades="yes" Schedule="afterInstallValidate" />
+
     <Media Id='1' Cabinet='langpack.cab' EmbedCab='yes' CompressionLevel="high" />
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
 
     <Property Id="ALLUSERS">1</Property>
+
+    <?if $(env.Platform) = "win32" ?>
+    <Condition Message="You are attempting to run the 32-bit installer on a 64-bit version of Windows. Please install the 64-bit version of the TortoiseSVN language pack instead.">NOT Msix64</Condition>
+    <?endif ?>
 
     <Property Id="INSTALLDIR">
       <RegistrySearch Id="TSVNInstallationDir" Root="HKLM" Key="Software\[Manufacturer]" Name="Directory" Type="raw" Win64="$(var.Win64YesNo)"/>
