@@ -241,6 +241,7 @@ LPARAM CMergeWizardReintegrate::OnWCStatus(WPARAM wParam, LPARAM /*lParam*/)
 
 bool CMergeWizardReintegrate::OkToCancel()
 {
+    StopWCCheckThread();
     if (::IsWindow(m_pLogDlg->GetSafeHwnd())&&(m_pLogDlg->IsWindowVisible()))
     {
         m_pLogDlg->SendMessage(WM_CLOSE);
