@@ -52,6 +52,14 @@ Version 1.7.8
 - BUG: Issue #344: DC leaks cause crashes. (Stefan)
 - BUG: Issue #345: Crash in progress
        dialog. (Stefan)
+- BUG: Issue #346: crash diffing invalid
+       icon files. (Stefan)
+- BUG: Issue #347: long paths crash
+       TortoiseBlame. (Stefan)
+- BUG: Issue #348: crash closing
+       merge wizard. (Stefan)
+- CHG: Issue #349: Language packs
+       downgrade. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
